[gd_scene load_steps=4 format=2]

[ext_resource path="res://kra_imported/todda 32x32.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Miscs/distroy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/enemies/todda.gd" type="Script" id=3]

[node name="todda" type="Area2D" groups=[
"todda",
]]
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 3, 4 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -61.587, -50.7693, 63.9659, -50.777, 0.326286, 60.2387 )

[node name="distroy" parent="." instance=ExtResource( 2 )]
scale = Vector2( 5, 5 )
frame = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -64, -64, 128, 128 )
[connection signal="area_entered" from="." to="." method="_on_todda_area_entered"]
[connection signal="animation_finished" from="distroy" to="." method="_on_distroy_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
